# push_swap

./: .gitignore  .gitmodules  .zshrc  CMakeLists.txt  Makefile  supertest.sh
.github/workflows/: c-cpp.yml
checker_dir/: CMakeLists.txt  Makefile
checker_dir/srcs/: checker.c
checker_src/: CMakeLists.txt  Makefile  checker.c
common/: print_stacks.c  stack_action.c
common_dir/includes/: common.h
common_dir/srcs/: print_stacks.c  readarg.c  stack_action.c  sub_functions.c
fdf/: .gitignore  CMakeLists.txt  Makefile  colorize_map.c  do_transform.c  draw_line.c  draw_main.c  draw_woo.c  fdf.c  fdf.h  getters.c  init_images.c  key_hook.c  mouse_hook.c  mouse_moves.c  normalize_map.c  other_hooks.c  point_list.c  read_map.c  rotate_arrays.c  setters.c  transforms.c
fdf/ft_printf/: Makefile  ft_printf.c  ft_printf.h
fdf/libft/: Makefile  ft_stack_init.c  ft_stack_pop.c  ft_strtol.c  get_next_line.c  get_next_line.h  libft.h
fdf/minilibx/: Makefile.gen  Makefile.mk
fdf/minilibx_macos/: CMakeLists.txt  mlx_new_window.m
fdf/srcs/: draw_line.c  draw_main.c  draw_woo.c  init_images.c  key_hook.c  normalize_map.c  read_map.c  transforms.c
ft_ls/: .gitignore  CMakeLists.txt  Makefile  callbacks.c  ft_ls.c  ft_ls.h  get_field_lengths.c  get_lst_params.c  get_vals.c  getset_format.c  lists.c  parse_args.c  print_entry.c  print_list.c  print_long.c  print_rights.c  print_short.c  print_sub.c  read_dir.c  sort_lists.c  sub_funcs.c  time_sub.c  write_errors.c  write_strings.c  writeout.c
ft_ls/libft/: Makefile  ft_intmove.c  ft_isspace.c  ft_lstaddsorted.c  ft_lstget.c  ft_lstnewblank.c  ft_queue_add.c  ft_queue_poll.c  ft_stack_delall.c  ft_stack_init.c  ft_stack_pop.c  ft_stack_push.c  ft_strnstr.c  ft_strsplit.c  get_next_line.c  get_next_line.h  libft.h
ftprintf/: .gitignore  CMakeLists.txt  Makefile  add_double.c  add_paddings.c  add_prefix.c  add_to_out.c  add_unsigned.c  calc_double.c  ft_printf.c  ft_printf.h  long_ariph.c  parse_character.c  parse_double.c  parse_flags.c  parse_format.c  parse_lenmod.c  parse_precision.c  parse_signed.c  parse_string.c  parse_type.c  parse_unsigned.c  parse_width.c  sub_functions.c  test.c
ftprintf/libft/: Makefile  ft_atoi.c  ft_strnstr.c  libft.h
init/network/: 02a  02b  03  04
init/system/: 02
libft/: .gitignore  Makefile  ft_array_foreach.c  ft_array_remove.c  ft_memalloc.c  ft_safe_atoi.c  ft_stack_delall.c  ft_strdel.c  ft_strtol.c  ft_trim_spaces.c  libft.h
libft/ft_printf/: Makefile  add_to_out.c  ft_printf.c  ft_printf.h
minishell/: .gitignore  CMakeLists.txt  Makefile  minishell.c  minishell.h
minishell/libft/: libft.h
new_pushswap/: .gitignore  CMakeLists.txt
new_pushswap/checker/: CMakeLists.txt  checker.c  checker.h
new_pushswap/common/: actions.c  check_arr.c  common.h  dllist.c  readarg.c  stack_action.c  sub_functions.c
new_pushswap/libft/: libft.h
new_pushswap/push_swap/: CMakeLists.txt  Makefile  push_swap.c  push_swap.h
push_swap/: .gitignore  .gitmodules  CMakeLists.txt  Makefile  common.h  main.c  stack.c  stack_sec.c  sub_functions.c
push_swap/checker/: Makefile  checker.c  checker.h
push_swap/checker_src/: CMakeLists.txt  checker.c
push_swap/common/: common.h  readarg.c  stack.c  stack_sec.c  sub_functions.c
push_swap/ft_printf/: Makefile  parse_string.c
push_swap/libft/: Makefile  ft_atoi.c  ft_getc.c  ft_intmove.c  ft_stack_push.c  ft_stack_size.c  ft_strnstr.c  ft_strsplit.c  ft_strtol.c  libft.h
push_swap/push_swap/: Makefile  new_pushswap.c  push_swap.c  push_swap.h
push_swap/push_swap_src/: CMakeLists.txt  Makefile  diffs.c  find_max_seq.c  find_median.c  find_optimal.c  find_solution.c  push_swap.c  push_swap.h
push_swap2/: .gitignore  CMakeLists.txt  Makefile  pyviz.py
push_swap2/checker/: CMakeLists.txt  checker.c
push_swap2/checker_src/: CMakeLists.txt  Makefile  checker  checker.c  checker.h
push_swap2/common/: common.h  print_stacks.c  readarg.c  stack.c  stack_action.c  stack_sec.c  sub_functions.c
push_swap2/libft/: Makefile  ft_strlen.c  libft.h
push_swap2/push_swap/: CMakeLists.txt  Makefile  push_swap.c  push_swap.h
push_swap2/push_swap_src/: CMakeLists.txt  Makefile  find_solution.c  paste_values.c  push_swap  push_swap.c  push_swap.h  sort_stack.c
push_swap_dir/: CMakeLists.txt  Makefile
push_swap_dir/srcs/: find_max_seq.c  find_median.c  find_optimal.c  find_solution.c  push_swap.c  sort_stack.c
push_swap_src/: CMakeLists.txt  diffs.c  find_median.c  push_swap.h  sort_stack.c
test/: .gitignore  Makefile  long_ariph.c  main.c  main.h  sub_func.c
